Attempt to fix bug of images not showing on deployed site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ h1, h2, h3 {
 #bike-image {
     height: 800px;
     width: 100%;
-    background: url(/assets/images/gbg-cycle.jpg) no-repeat center center;
+    background: url(assets/images/gbg-cycle.jpg) no-repeat center center;
     overflow: hidden;
 }
 
